Made page responsive using meta

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Amar Agrawal, Amar Agrawal Portfolio">
+    <meta name="description" content="Graphic and Designer, R&D manager, R Programmer, soon to be fullstack developer">
+<!--    <link rel="icon" href="">-->
+    <title>Amar Agrawal|Portfolio</title>
     <style>
         .main {
             text-align: center;
@@ -18,7 +22,7 @@
             id="ProfileImage"
     />
     <h2 id="fullName"></h2>
-    <p id="personalBio">Dont allow anyone to feel that you are not good enough.</p>
+    <p id="personalBio"></p>
     <h5 id="followersInfo"></h5>
     <p>
         Check me out on <a id="githubLink">GitHub</a> & <a href="https://www.linkedin.com/in/amar-agrawal-5370a814b/">LinkedIn</a>
